# scientific-rag

./: .env.dist  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
demo/: main.py
docs/: assignment.md  roles.md  submission.md  tasks.md  team_roles.md
notebooks/: 01_test_data_loader.ipynb  02_test_rag_pipeline.ipynb  03_chunks_eda.ipynb
ops/: DEPLOYMENT.md  README_SPACES.md  requirements.txt
src/scientific_rag/: __init__.py  cli.py  settings.py
src/scientific_rag/application/: data_loader.py
src/scientific_rag/application/chunking/: scientific_chunker.py
src/scientific_rag/application/embeddings/: encoder.py
src/scientific_rag/application/query/: query_processor.py
src/scientific_rag/application/query_processing/: query_processor.py
src/scientific_rag/application/rag/: llm_client.py  pipeline.py  prompt_templates.py
src/scientific_rag/application/reranking/: cross_encoder.py
src/scientific_rag/application/retrieval/: bm25_retriever.py  dense_retriever.py  hybrid_retriever.py
src/scientific_rag/application/scripts/: chunk_data.py
src/scientific_rag/domain/: documents.py  queries.py  responses.py  types.py
src/scientific_rag/infrastructure/: qdrant.py
src/scientific_rag/scripts/: index_qdrant.py
